--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ jobs:
   include:
     - stage: compile
       language: android
-      #before_script: chmod +x gradlew
+      before_script: chmod +x gradlew
       script: ./gradlew assembleDebug assembleRelease
 
     - stage: tests
       language: android
-      #before_script: chmod +x gradlew
+      before_script: chmod +x gradlew
       script: ./gradlew test
