--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
     - stage: compile
       language: android
       before_script: chmod +x gradlew
-      script: ./gradlew assembleDebug assembleRelease
+      script: ./gradlew clean assembleDebug assembleRelease
 
     - stage: tests
       language: android
