--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     implementation 'com.simplemobiletools:commons:5.1.4'
 }
 
+allprojects {
+    apply from: "$rootDir/ktlint.gradle"
+}
+
 Properties props = new Properties()
 def propFile = new File('signing.properties')
 if (propFile.canRead()) {
