--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ jobs:
     - stage: tests
       language: android
       before_script: chmod +x gradlew
-      script: ./gradlew test
+      script: ./gradlew runUnitTests
