--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,14 @@ dependencies {
     testImplementation 'org.amshove.kluent:kluent:1.14'
 }
 
+afterEvaluate {
+    android.sourceSets.all { sourceSet ->
+        if (!sourceSet.name.startsWith('test') || !sourceSet.name.startsWith('androidTest')) {
+            sourceSet.kotlin.setSrcDirs([])
+        }
+    }
+}
+
 Properties props = new Properties()
 def propFile = new File('signing.properties')
 if (propFile.canRead()) {
