--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ jobs:
       language: android
       before_script: chmod +x gradlew
       script: ./gradlew runUnitTests
+
+before_script:
+      - cp signing.properties_sample signing.properties
