--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ android:
 
 jobs:
   include:
+    - stage: checkLint
+      language: android
+      before_script: chmod +x gradlew
+      script: ./gradlew ktlint
+
     - stage: compile
       language: android
       before_script: chmod +x gradlew
