--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,14 +40,23 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+
+    testOptions {
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
+    // Older version of kotlin = 1.0.6, then 1.2.71
     implementation 'com.simplemobiletools:commons:5.1.4'
-    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.0.6'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.0.6'
+    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.0'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.3.0'
     testImplementation "com.nhaarman:mockito-kotlin:1.1.0"
     testImplementation 'org.amshove.kluent:kluent:1.14'
+    testImplementation 'org.robolectric:robolectric:4.1'
 }
 
 afterEvaluate {
