--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
     - stage: tests
       language: android
       before_script: chmod +x gradlew
-      script: ./gradlew runUnitTests
+      script: ./gradlew testDebugUnitTestExtended
 
 before_script:
       - cp signing.properties_sample signing.properties
