--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-task runUnitTests(dependsOn: [':app:testDebugUnitTest']) {
+task testDebugUnitTestExtended(dependsOn: [':app:testDebugUnitTest']) {
     description 'Run all unit tests'
 }
 
