--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ jobs:
     - stage: compile
       language: android
       before_script: chmod +x gradlew
-      script: ./gradlew ktlint assembleDebug
+      script:
+        - ./gradlew ktlint
+        - ./gradlew assembleDebug
 
     - stage: tests
       language: android
