--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
-
     defaultConfig {
         applicationId "com.simplemobiletools.camera"
         minSdkVersion 21
@@ -14,11 +13,9 @@ android {
         versionName "5.0.0"
         setProperty("archivesBaseName", "camera")
     }
-
     signingConfigs {
         release
     }
-
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
@@ -29,16 +26,16 @@ android {
             signingConfig signingConfigs.release
         }
     }
-
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
         test.java.srcDirs += 'src/test/kotlin'
         androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
-
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
+    }
+    productFlavors {
     }
 }
 
@@ -46,7 +43,7 @@ dependencies {
     implementation 'com.simplemobiletools:commons:5.1.4'
     testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.0'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.3.0'
-    testImplementation "com.nhaarman:mockito-kotlin:1.1.0"
+    testImplementation 'com.nhaarman:mockito-kotlin:1.1.0'
     testImplementation 'org.amshove.kluent:kluent:1.14'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
