--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
     repositories {
         google()
         maven { url 'https://jitpack.io' }
+        maven { url "https://maven.google.com" }
         jcenter()
 
     }
