Added jacoco output executable

--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,15 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'org.jacoco:org.jacoco.core:0.7.6.201602180812'
+        classpath 'org.jacoco:org.jacoco.core:0.7.1.201405082137'
+        classpath 'com.github.ksoichiro:gradle-console-reporter:0.6.2'
+        //classpath 'org.jacoco:org.jacoco.core:0.7.6.201602180812'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+apply plugin: 'com.github.ksoichiro.console.reporter'
 
 allprojects {
     repositories {
