--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ jobs:
       language: android
       before_script: chmod +x gradlew
       script: 
-        - ls
         - ./gradlew jacocoTestReport
-        - cd TRAVIS_BUILD_DIR/displayJacoco/dist/
+        - cd $TRAVIS_BUILD_DIR/displayJacoco/dist/
         - ./output_jacoco_metrics.exe
