--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,4 @@ jobs:
       before_script: chmod +x gradlew
       script: 
         - ./gradlew jacocoTestReport
-        - cd $TRAVIS_BUILD_DIR/displayJacoco/dist/
-        - ./output_jacoco_metrics.exe
+        - cd $TRAVIS_BUILD_DIR/displayJacoco/dist/ && chmod +x output_jacoco_metrics.exe && ./output_jacoco_metrics.exe
