--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ jobs:
       language: android
       before_script: chmod +x gradlew
       script: 
+        - ./gradlew jacocoTestReport
         - cd $TRAVIS_BUILD_DIR/displayJacoco/ && python output_jacoco_metrics.py
