--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ android:
 
 jobs:
   include:
+    - stage: compile
+      language: android
+      before_script: chmod +x gradlew
+      script:
+        - ./gradlew ktlint
+        - ./gradlew assembleDebug
+
     - stage: tests
       language: android
       before_script: chmod +x gradlew
