--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,8 +80,10 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-vision:15.0.0'
+
 }
 
 afterEvaluate {
