--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services-location:15.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-vision:15.0.0'
+    //implementation 'com.google.android.gms:play-services-vision:15.0.0'
+    //implementation 'com.google.android.gms:play-services-vision:17.0.2'
 
 }
 
