Added -noverify to app gradle file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ android {
             returnDefaultValues = true
             includeAndroidResources = true
         }
+        unitTests.all {
+            jvmArgs '-noverify'
+        }
 
     }
 }
