--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,16 @@ android:
 
 jobs:
   include:
+    - stage: compile
+      language: android
+      before_script: chmod +x gradlew
+      script:
+        - ./gradlew ktlint
+        - ./gradlew assembleDebug
+
     - stage: tests
       language: android
       before_script: chmod +x gradlew
-      script: 
+      script:
         - ./gradlew jacocoTestReport
         - cd $TRAVIS_BUILD_DIR/displayJacoco/ && python output_jacoco_metrics.py
