--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ jobs:
       language: android
       before_script: chmod +x gradlew
       script:
-        - ./gradlew jacocoTestReport
+        - ./gradlew jacocoTestReport | python AnalysisCI/analyze_ci.py
         - cd $TRAVIS_BUILD_DIR/displayJacoco/ && python output_jacoco_metrics.py
