--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,13 @@ android:
   components:
   - build-tools-28.0.3
   - android-28
-jobs:
+jobs: 
   include:
-  - stage: compile
-    language: android
-    before_script: chmod +x gradlew
-    script:
-    - "./gradlew ktlint"
-    - "./gradlew assembleDebug"
   - stage: tests
     language: android
     before_script: chmod +x gradlew
     script:
-    - "./gradlew jacocoTestReport | python AnalysisCI/analyze_ci.py"
+    - ./gradlew jacocoTestReport | python AnalysisCI/analyze_ci.py
     - cd $TRAVIS_BUILD_DIR/displayJacoco/ && python output_jacoco_metrics.py
 env:
   global:
