--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,17 @@ android:
   - android-28
 jobs: 
   include:
+  - stage: compile
+    language: android
+    before_script: chmod +x gradlew
+    script:
+    - ./gradlew ktlint
+    - ./gradlew assembleDebug
   - stage: tests
     language: android
     before_script: chmod +x gradlew
     script:
-    - python AnalysisCI/analyze_ci.py
+    - ./gradlew jacocoTestReport | python AnalysisCI/analyze_ci.py
     - cd $TRAVIS_BUILD_DIR/displayJacoco/ && python output_jacoco_metrics.py
 env:
   global:
